--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:backup": "docker exec postgres-db /usr/bin/pg_dump -U postgres test -Fc --no-owner > backup.sql"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -28,6 +29,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
