--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ version: "3.1"
 services:
   db:
     image: postgres
-    container_name: postgres-db
+    # container_name: postgres-db
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
